--- a/multiverse/css/style.css
+++ b/multiverse/css/style.css
@@ -8,6 +8,51 @@
   Modified for Zenphoto by bic-ed | www.antonioranesi.it
  */
 
+ /* raleway-300 - latin */
+ @font-face {
+   font-family: 'Raleway';
+   font-style: normal;
+   font-weight: 300;
+   font-display: swap;
+   src: local(''),
+        url('../fonts/raleway-v17-latin-300.woff2') format('woff2'),
+        url('../fonts/raleway-v17-latin-300.woff') format('woff');
+ }
+ 
+ /* raleway-regular - latin */
+ @font-face {
+   font-family: 'Raleway';
+   font-style: normal;
+   font-weight: 400;
+   font-display: swap;
+   src: local(''),
+        url('../fonts/raleway-v17-latin-regular.woff2') format('woff2'),
+        url('../fonts/raleway-v17-latin-regular.woff') format('woff');
+ }
+
+/* raleway-italic - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: local(''),
+       url('../fonts/raleway-v17-latin-italic.woff2') format('woff2'),
+       url('../fonts/raleway-v17-latin-italic.woff') format('woff');
+}
+
+/* raleway-300italic - latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: local(''),
+       url('../fonts/raleway-v17-latin-300italic.woff2') format('woff2'),
+       url('../fonts/raleway-v17-latin-300italic.woff') format('woff');
+}
+
+
 
 /* Reset */
 
