Redesigned sliding navigation for poptrox pupup • Optimized code for a smoother slide of the popup during drag/swipe • Reorganized js variables to be more readable • Enclosed all of the js code into the main function in main.js • Replaced cursor with grab on hover popup and grabbing on drag

--- a/multiverse/css/style.css
+++ b/multiverse/css/style.css
@@ -1045,6 +1045,12 @@ table.alt tfoot {
 .poptrox-popup.loading:before {
   opacity: 0;
 }
+.pic img {
+  cursor: grab;
+}
+.swipe .pic img {
+  cursor: grabbing;
+}
 
 header > #fullscreen {
 	opacity: 0.5;
