--- a/multiverse/css/style.css
+++ b/multiverse/css/style.css
@@ -293,7 +293,7 @@ button,
   font-weight: 300;
   height: 3.05556em;
   letter-spacing: 0.1em;
-  line-height: 3.05556em;
+  line-height: 3.05556;
   padding: 0 1.7em;
   width: calc(50% - 0.7625em);
   text-align: center;
@@ -438,7 +438,8 @@ input[type="checkbox"] + label[for="comment_dataconfirmation"]::before {
 	font-family: FontAwesome;
 	margin-right: 0.25em;
 	position: relative;
-	top: 1px;
+	top: .0758em;
+	left: .0758em;
 }
 input[type="checkbox"]:checked + label[for="dataconfirmation"]::before,
 input[type="checkbox"]:checked + label[for="comment_dataconfirmation"]::before {
@@ -728,7 +729,6 @@ ul.alt li:first-child {
   padding-left: 0;
 }
 .social > ul li {
-  display: inline-block;
   padding: 0 1em 0 0;
 }
 .social > ul li:last-child {
@@ -1211,7 +1211,6 @@ header nav {
   top: 0;
 }
 header nav>ul {
-  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -1473,31 +1472,31 @@ footer .copyright a {
 }
 
 
-/* Menu Settings */
+/* Zenphoto Menus */
 
 .main-nav ul:not(.drop) a {
-  max-height: 0px;
-  transition: max-height .6s;
+  height: 0px;
+  transition: height .6s;
+  transition-timing-function: ease-in-out;
 }
 .main-nav ul:not(.drop).dropped a{
-  transition: max-height 1s, color .3s;
-  max-height: 45px;
+  height: 3.196em;
+  transition: height 1s, color .4s;
+  transition-timing-function: ease-in-out;
 }
 .main-nav ul:not(.drop) li {
   overflow-x: hidden;
   width: 0;
-  transition: width .6s;
+  transition: width .8s ease-in-out;
 }
 .main-nav ul:not(.drop).dropped li{
-  transition: width 1s;
 	width: 100%;
 }
 .main-nav {
-  text-align: left;
-  letter-spacing: -1em;
   margin: 0 0 2em 0;
   padding: 0;
-  list-style: none;
+  text-align: left;
+  letter-spacing: -1em;
 }
 
 .main-nav ul li {
@@ -1507,14 +1506,14 @@ footer .copyright a {
 .main-nav a {
   position: relative;
 	display: block;
-	line-height: 45px;
-	color: #a0a0a1;
-  padding: 0 15px;
-	white-space: nowrap;
 	overflow: hidden;
-	text-overflow: ellipsis;
+  padding: 0 15px;
+	color: #a0a0a1;
   text-transform: uppercase;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 	font-size: 0.96em;
+	line-height: 3.196;
 }
 
 
@@ -1544,7 +1543,7 @@ footer .copyright a {
 .main-nav ul:not(.drop) li {
   background-color: #2c2e33;
 }
-.main-nav ul:not(.drop) li:nth-of-type(odd) {
+.main-nav ul:not(.drop) li:nth-of-type(2n+1) {
   background-color: #2F3136;
 }
 .main-nav ul:not(.drop) li > a.active-item::after {
@@ -1573,7 +1572,7 @@ footer .copyright a {
   transition: color .3s;
 }
 footer ul {
-	list-style: disc;
+	list-style: none;
 	padding-left: 0;
 }
 footer ul li {
@@ -1587,14 +1586,14 @@ footer ul li {
 	background-color: #2c2e33;
 	color: #a0a0a1;
   line-height: 2.75em;
-	padding-right: 38px;
+	padding-right: 2.415em;
   user-select: none;
 }
 .drop a::after {
 	font-family: FontAwesome;
 	content: "\f078";
 	position: absolute;
-	right: 15px;
+	right: 1.065em;
   transition: transform .7s;
 }
 .drop a:hover {
@@ -1622,7 +1621,7 @@ footer ul li {
 }
 
 
-/* RSS */
+/* Zenphoto RSS */
 
 .icons {
   display: flex;
@@ -1643,36 +1642,16 @@ footer ul li {
 }
 .main-nav.rss a.fa-rss {
   padding: 0 0 0 .7em;
-  /* box-shadow: inset 0px 0px 0px 1px #505051; */
 }
 .main-nav.rss a::after {
   right: unset;
   margin-left: .7em;
 }
+.fa-rss::before {
+	vertical-align: top;
+}
 .social {
   overflow-x: hidden;
-}
-
-
-/* Zenphoto menu */
-
-.main-nav form {
-	position: relative;
-  transition: color .3s;
-}
-.main-nav form::before {
-	content: "\f078";
-	font-family: FontAwesome;
-	position: absolute;
-	top: 8px;
-	right: 30px;
-}
-.main-nav form:focus-within::before {
-	transform: rotate(180deg);
-	right: 15px;
-}
-.main-nav form  select:hover {
-  cursor: pointer;
 }
 
 
@@ -1762,33 +1741,77 @@ footer ul li {
   margin-left: 0.5em;
 }
 
+
+/* Zenphoto Search bar */
+
 #search {
 	position: relative;
 }
+#search_input {
+	padding: 0 3.4em;
+	box-shadow: inset 0 0 0 0.26em #2c2e33;
+	letter-spacing: normal;
+	font-size: .979em;
+}
+#search_input:focus {
+	box-shadow: inset 2.85em 0 0 2px #59a6d5,inset -2.875em 0 0 2px #59a6d5;
+}
+#search_submit {
+  position: absolute;
+  top: 0;
+  right: 0;
+  overflow: hidden;
+  padding: 0;
+  width: 2.786em;
+	height: 2.692em;
+	box-shadow: none;
+  text-indent: 33em;
+	font-size: 1em;
+  /* opacity & background-color for fake hover effect on Search Icon (below) */
+  opacity: 0.449;
+  transition: opacity .4s;
+  background-color: #2c2e33;
+}
+ /* Search Icon for Submit Button placed on Search Form ::before */
+#search_form::before {
+	position: absolute;
+	right: 0;
+	width: 2.786em;
+	height: 2.692em;
+	background-color: #2c2e33;
+  /* color not exactly white to compensate #search_submit background-color hue */
+  color: #fffdfc;
+	content: "\f002";
+	text-indent: 0.9em;
+  font-size: 1em;
+	font-family: FontAwesome;
+	line-height: 2.692;
+}
+/* Fake hover effect on Search Icon */
+#search_submit:hover {
+	opacity: 0;
+}
+
 .toggle_searchextrashow {
 	position: absolute;
-	top: 1px;
-	border-bottom: none;
-	left: 1px;
-	width: 35px;
-	height: 37.5px;
+	top: 0;
+	width: 2.786em;
+	height: 2.692em;
 	outline-color: transparent;
+	border-bottom: none;
   background-color: #2c2e33;
 }
 .toggle_searchextrashow img {
 	display: none;
 }
 .toggle_searchextrashow::before {
+	position: absolute;
+  top: 0.5em;
+  left: 0.84em;
+	color: #a0a0a1;
 	content: "\f078";
 	font-family: Fontawesome;
-	position: absolute;
-	top: -1px;
-	color: #a0a0a1;
-	padding: 0.5em 0;
   transition: color .4s, transform .6s;
-	width: 2.375em;
-	text-indent: 0.7em;
-	line-height: 1.65em;
 }
 .toggle_searchextrashow:hover::before {
   color: #fff !important;
@@ -1796,83 +1819,93 @@ footer ul li {
 .toggle_searchextrashow.dropped::before {
   transform: rotate(-90deg);
 }
-#search_input {
-	padding: 0 3em;
-	font-size: .979em;
-	box-shadow: inset 0 0 0 0.16em #2c2e33;
-	letter-spacing: normal;
-}
-#search_submit {
-	position: absolute;
-	color: #a0a0a1 !important;
-	top: 0px;
-	right: 0px;
-	height: 2.657em;
-	padding: 0;
-	width: 2.786em;
-	box-shadow: none;
-	background-color: #2c2e33;
-	font-family: FontAwesome;
-	font-size: 1em;
-	line-height: 0;
-	transition: color .4s;
-}
-#search_submit:hover {
-  color: #fff !important;
-}
-#search_submit:active {
-	background-color: transparent;
-}
 #searchextrashow ul {
 	list-style: none;
-}
-#searchextrashow > label > input {
-	background-color: #4a97c6;
 }
 #searchextrashow {
 	display: block !important;
 }
 #searchextrashow label {
-	background-color: #2c2e33;
+	overflow: hidden;
 	margin: 0;
+	padding: 0;
+  width: 0;
+	height: 0;
+	background-color: #2c2e33;
 	text-transform: uppercase;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+  font-size: .96em;
+  line-height: 3.196;
 	cursor: pointer;
+	transition: height .6s, padding .8s, width .8s, border .4s;
+  transition-timing-function: ease-in-out;
+
 	-webkit-user-select: none;
 	   -moz-user-select: none;
 	    -ms-user-select: none;
 	        user-select: none;
-	overflow: hidden;
-	padding: 0;
-	height: 0;
-	transition: height .6s, padding .6s, color.6s;
 }
-#searchextrashow > label {
-	background-color: #3B3D42;
+#searchextrashow li:nth-of-type(2n+1) > label {
+	background-color: #2f3136;
 }
-
 #searchextrashow.dropped label {
-	padding: 0.6em 0.6em;
-	height: 2.7em;
+  padding: 0 1em;
+  width: 100%;
+	height: 3.196em;
+  transition: height 1s, padding .8s, width .8s, color .4s, border 1s;
+  transition-timing-function: ease-in-out;
 }
-
 #searchextrashow input[type="checkbox"] + label::before {
+	margin-right: 0.35em;
 	content: "\f096";
 	font-family: FontAwesome;
-	margin-right: 0.35em;
-  margin-left: 0.3em;
 }
 #searchextrashow input[type="checkbox"]:checked + label::before {
-	content: "\f046";
   margin-right: 0.2em;
+	content: "\f046";
+}
+/* Search within */
+#searchextrashow > label {
+	background-color: #2C2E33;
+}
+#searchextrashow > label:last-of-type {
+	border-bottom: 0px solid transparent;
+}
+#searchextrashow.dropped > label:last-of-type {
+	border-bottom: 1px solid #a0a0a1;
 }
 #searchextrashow input[type="radio"] + label::before {
+	margin-right: 0.35em;
 	content: "\f1db";
 	font-family: FontAwesome;
-	margin-right: 0.35em;
-  margin-left: 0.3em;
 }
 #searchextrashow input[type="radio"]:checked + label::before {
 	content: "\f05d";
+}
+
+
+/* Search Tag suggest plugin */
+
+#search_form .tagSuggestContainer {
+  position: static;
+}
+#search_form span.tagMatches {
+	top: 2.6em;
+	left: 2.786em;
+	width: calc(100% - 5.572em);
+}
+#search_form ._tag_suggestion:first-child {
+    padding-top: 0.8em;
+}
+#search_form ._tag_suggestion:last-child {
+    padding-bottom: 0.8em;
+}
+#search_form ._tag_suggestion {
+	padding: 0.2em 0.6em;
+	width: 100%;
+	background-color: #59a6d5;
+	color: #fff;
 }
 
 
@@ -2258,7 +2291,6 @@ ul.pagelist.gallery li:first-child > * {
   }
   #page {
     width: 100%;
-    /* margin: 0; */
   }
   header > #fullscreen {
     top: 0;
