--- a/multiverse/css/style.css
+++ b/multiverse/css/style.css
@@ -14,20 +14,20 @@
    font-style: normal;
    font-weight: 300;
    font-display: swap;
-   src: local(''),
-        url('../fonts/raleway-v17-latin-300.woff2') format('woff2'),
-        url('../fonts/raleway-v17-latin-300.woff') format('woff');
+   src: local('Raleway Light'), local('Raleway-Light'),
+        url('../fonts/raleway-v18-latin-300.woff2') format('woff2'),
+        url('../fonts/raleway-v18-latin-300.woff') format('woff');
  }
- 
+
  /* raleway-regular - latin */
  @font-face {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
-   src: local(''),
-        url('../fonts/raleway-v17-latin-regular.woff2') format('woff2'),
-        url('../fonts/raleway-v17-latin-regular.woff') format('woff');
+   src: local('Raleway'), local('Raleway-Regular'),
+        url('../fonts/raleway-v18-latin-regular.woff2') format('woff2'),
+        url('../fonts/raleway-v18-latin-regular.woff') format('woff');
  }
 
 /* raleway-italic - latin */
@@ -36,9 +36,9 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: local(''),
-       url('../fonts/raleway-v17-latin-italic.woff2') format('woff2'),
-       url('../fonts/raleway-v17-latin-italic.woff') format('woff');
+  src: local('Raleway Italic'), local('Raleway-Italic'),
+       url('../fonts/raleway-v18-latin-italic.woff2') format('woff2'),
+       url('../fonts/raleway-v18-latin-italic.woff') format('woff');
 }
 
 /* raleway-300italic - latin */
@@ -47,9 +47,9 @@
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: local(''),
-       url('../fonts/raleway-v17-latin-300italic.woff2') format('woff2'),
-       url('../fonts/raleway-v17-latin-300italic.woff') format('woff');
+  src: local('Raleway Light Italic'), local('Raleway-Light-Italic'),
+       url('../fonts/raleway-v18-latin-300italic.woff2') format('woff2'),
+       url('../fonts/raleway-v18-latin-300italic.woff') format('woff');
 }
 
 
