--- a/multiverse/css/style.css
+++ b/multiverse/css/style.css
@@ -148,7 +148,7 @@ body.resizing *, body.resizing *:before, body.resizing *:after {
 
 /* Type */
 
-body, input, select, textarea, button {
+body, input, textarea, button {
   color: #a0a0a1;
   font-family: "Raleway", Helvetica, sans-serif;
   font-size: 15pt;
@@ -352,14 +352,10 @@ button.special:hover:active,
 .button.special:hover:active {
   background-color: #3a87b6;
 }
-input[type="submit"].disabled, input[type="submit"]:disabled,
-input[type="reset"].disabled,
+input[type="submit"]:disabled,
 input[type="reset"]:disabled,
-input[type="button"].disabled,
 input[type="button"]:disabled,
 button.disabled,
-button:disabled,
-.button.disabled,
 .button:disabled {
   -moz-pointer-events: none;
   -webkit-pointer-events: none;
@@ -369,7 +365,134 @@ button:disabled,
 }
 
 
-/* Form */
+/* Form [Modified] */
+
+label {
+  display: block;
+  margin: 0 0 1em 0;
+  letter-spacing: normal;
+  font-weight: 300;
+  transition: color .4s;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+label:hover {
+  color: #fff;
+}
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="url"],
+textarea {
+  display: block;
+  padding: 0 1em;
+  width: 100%;
+  outline: 0;
+  border: 0;
+  border-radius: 0;
+  background: #34363b;
+  color: #a0a0a1;
+  text-decoration: none;
+}
+/* .field is for custom Zenphoto Multiverse forms */
+.field:invalid + label,
+input[type="text"]:invalid,
+input[type="password"]:invalid,
+input[type="email"]:invalid,
+input[type="url"]:invalid,
+textarea:invalid {
+  box-shadow: none;
+  transition: box-shadow 0s .15s, color .4s;
+}
+.field:valid + label,
+.field:valid {
+  box-shadow: none;
+  transition: box-shadow 0s .15s, color .4s;
+}
+form:focus-within .field:invalid + label,
+form:focus-within .field:invalid {
+  box-shadow: -2px 0 0 0 #923A3A;
+  transition: box-shadow .4s, color .4s;
+}
+form:focus-within .field:valid + label,
+form:focus-within .field:valid {
+  box-shadow: -2px 0 0 0 #409c81;
+  transition: box-shadow .4s, color .4s;
+}
+form:focus-within .field:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+textarea:focus {
+  box-shadow: inset 0 0 0 2px #59a6d5;
+  transition: box-shadow 0s;
+}
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="url"] {
+  height: 2.75em;
+}
+textarea {
+  padding: 0.75em 1em;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  position: relative;
+  top: 0.16em;
+  left: -0.4em;
+  z-index: -1;
+  display: block;
+  float: left;
+  margin-right: -2em;
+  width: 1em;
+  opacity: 0;
+}
+input[type="checkbox"]+label,
+input[type="radio"]+label {
+  position: relative;
+  margin: 0;
+  max-width: max-content;
+  cursor: pointer;
+}
+input[type="checkbox"]+label::before,
+input[type="radio"]+label::before {
+  text-transform: none !important;
+  font-weight: normal;
+  font-style: normal;
+  font-family: FontAwesome;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+input[type="radio"]+label::before {
+  border-radius: 100%;
+}
+::-webkit-input-placeholder {
+  color: #707071 !important;
+  opacity: 1.0;
+}
+::-moz-placeholder {
+  color: #707071 !important;
+  opacity: 1.0;
+}
+:-ms-input-placeholder {
+  color: #707071 !important;
+  opacity: 1.0;
+}
+::-ms-input-placeholder {
+  color: #707071 !important;
+  opacity: 1.0;
+}
+::placeholder {
+  color: #707071 !important;
+  opacity: 1.0;
+}
+
+/* Zenphoto forms */
 
 form {
   margin: 0 0 2em 0;
@@ -377,34 +500,26 @@ form {
 form .field input {
   margin: 0 0 1.3em 0;
 }
-#mailform {
-  margin-top: -0.8em;
-}
-#mailform input:not(.button),
-#commentform input:not(.button) {
+form input:not(.button) {
   float: left;
   margin-bottom: 1.2em;
 }
 form .special {
   margin-right: 1em;
 }
-form .field.half,
-form #name,
-form #email {
+form .half {
   width: calc(50% - 0.6em);
 }
 
-form .field.half.first,
-form #name {
+form .half.first {
   margin-right: 1.2em;
 }
-form #message {
+#mailform textarea {
   height: 6.7em;
 }
-form .textarea_inputbox{
-  margin-bottom: 2em;
+form textarea {
+  margin-bottom: 1.2em;
 }
-
 #form-result {
   display:none;
 }
@@ -416,36 +531,24 @@ form .textarea_inputbox{
   margin-bottom: 2em;
   border-radius: 4px;
 }
-label[for="dataconfirmation"],
-label[for="comment_dataconfirmation"] {
-  cursor: pointer;
-  margin: -1.3em 0;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  transition: color .4s;
-  font-size: 0.9em !important;
-  text-transform: lowercase;
-  letter-spacing: normal;
+.data_conf {
+  margin: -.52em 0 .8em;
+  font-size: 10pt;
+  line-height: 1.7;
 }
-input[type="checkbox"] + label[for="dataconfirmation"]::before,
-input[type="checkbox"] + label[for="comment_dataconfirmation"]::before {
+.data_conf label {
+  display: inline;
+}
+input[type="checkbox"]+label::before {
+  margin-right: 0.4em;
   content: "\f096";
-  font-family: FontAwesome;
-  margin-right: 0.25em;
-  position: relative;
-  top: .0758em;
-  left: .0758em;
+  padding-left: 2px;
 }
-input[type="checkbox"]:checked + label[for="dataconfirmation"]::before,
-input[type="checkbox"]:checked + label[for="comment_dataconfirmation"]::before {
+input[type="checkbox"]:checked+label::before {
   content: "\f046";
-  margin-right: 0.1em;
+  margin-right: 0.25em;
 }
-input[type="checkbox"]:focus + label[for="dataconfirmation"]::before,
-input[type="checkbox"]:focus + label[for="comment_dataconfirmation"]::before {
+input[type="checkbox"]:focus+label::before {
   outline: gray dotted 1px;
 }
 #commentform {
@@ -495,44 +598,44 @@ input[type="checkbox"]:focus + label[for="comment_dataconfirmation"]::before {
   color: #e6e6e6;
 }
 
-#passwordform img {
-  display: none;
-}
-#logonstep_challenge_js {
-  white-space: normal;
-  height: auto;
-  width: 100%;
-}
-#logon_box fieldset > input {
-  margin: 0.8em 0;
-}
-#logon_box br {
-  display: none;
-}
 #passwordform {
   max-width: 25em;
   padding: 1em;
   background-color: #2c2e33;
 }
-#passwordform .buttons > button,
-#passwordform .button {
-  font-size: 0.8rem;
+#loginform {
+  padding: 1em;
+  background-color: #2f3136;
 }
-#passwordform label {
-  cursor: pointer;
-  transition: color .2s;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+#loginform > .errorbox {
+  font-size: .8em;
 }
-.showpw::after {
-  content: '\f00c';
-  font-family: FontAwesome;
-  margin-left: 6px;
-  margin-top: -1px;
-  position: absolute;
-  opacity: 0.7;
+#loginform form {
+  margin-bottom: 1em;
+  background-color: #2f3136;
+}
+#loginform button {
+  font-size: 10pt;
+}
+#logon_box > legend {
+  margin-bottom: 1em;
+}
+#logon_box br,
+#logon_box img {
+  display: none;
+}
+#logon_box label {
+  display: inline-block;
+  margin-bottom: 1.2em;
+  font-size: 11pt;
+}
+#logonstep_challenge_js {
+  padding: 1em;
+  width: 100%;
+  height: auto;
+  white-space: normal;
+  font-size: 8.5pt;
+  line-height: 1.65;
 }
 #logonstep_challenge_js strong {
   transition-duration: .4s
@@ -540,133 +643,9 @@ input[type="checkbox"]:focus + label[for="comment_dataconfirmation"]::before {
 #logonstep_challenge_js:hover strong {
   color: #59a6d5;
 }
-
-label {
-  display: block;
-  font-size: 0.9em;
-  font-weight: 300;
-  margin: 0 0 1em 0;
+.logon_link {
+  margin: 0;
 }
-label:hover {
-  color: #fff;
-}
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="tel"],
-select,
-textarea {
-  background: #34363b;
-  border: 0;
-  border-radius: 0;
-  color: #a0a0a1;
-  display: block;
-  outline: 0;
-  padding: 0 1em;
-  text-decoration: none;
-  width: 100%;
-}
-input[type="text"]:invalid,
-input[type="password"]:invalid,
-input[type="email"]:invalid,
-input[type="tel"]:invalid,
-select:invalid,
-textarea:invalid {
-  box-shadow: none;
-}
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="email"]:focus,
-input[type="tel"]:focus,
-select:focus,
-textarea:focus {
-  box-shadow: inset 0 0 0 2px #59a6d5;
-}
-.select-wrapper {
-  text-decoration: none;
-  display: block;
-  position: relative;
-}
-.select-wrapper:before {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-transform: none !important;
-}
-.select-wrapper:before {
-  color: #36383c;
-  content: '\f078';
-  display: block;
-  height: 2.75em;
-  line-height: 2.75em;
-  pointer-events: none;
-  position: absolute;
-  right: 0;
-  text-align: center;
-  top: 0;
-  width: 2.75em;
-}
-.select-wrapper select::-ms-expand {
-  display: none;
-}
-input[type="text"],
-input[type="password"],
-input[type="email"],
-select {
-  height: 2.75em;
-}
-textarea {
-  padding: 0.75em 1em;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  display: block;
-  float: left;
-  margin-right: -2em;
-  opacity: 0;
-  z-index: -1;
-  position: relative;
-  left: -0.39em;
-}
-input[type="checkbox"]+label,
-input[type="radio"]+label {
-  font-size: 1em;
-}
-input[type="checkbox"]+label:before,
-input[type="radio"]+label:before {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  text-transform: none !important;
-}
-input[type="radio"]+label:before {
-  border-radius: 100%;
-}
-::-webkit-input-placeholder {
-  color: #707071 !important;
-  opacity: 1.0;
-}
-:-moz-placeholder {
-  color: #707071 !important;
-  opacity: 1.0;
-}
-::-moz-placeholder {
-  color: #707071 !important;
-  opacity: 1.0;
-}
-:-ms-input-placeholder {
-  color: #707071 !important;
-  opacity: 1.0;
-}
-.formerize-placeholder {
-  color: #707071 !important;
-  opacity: 1.0;
-}
-
 
 /* Icon */
 
@@ -682,9 +661,6 @@ input[type="radio"]+label:before {
   font-style: normal;
   font-weight: normal;
   text-transform: none !important;
-}
-.icon>.label {
-  display: none;
 }
 
 
@@ -1167,20 +1143,20 @@ body {
   padding: 0 0 4em 0;
 }
 header {
-  transition: transform 1s ease;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  background: #1f2224;
-  bottom: 0;
-  height: 4em;
-  left: 0;
-  line-height: 4em;
-  padding: 0 1.5em;
   position: fixed;
-  user-select: none;
-  width: 100%;
+  bottom: 0;
+  left: 0;
   z-index: 9992;
+  padding: 0 1.5em;
+  width: 100%;
+  height: 4em;
+  background: #1f2224;
+  line-height: 4em;
+  transition: transform 1s ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 body.modal-active header,
 body.loading header {
@@ -1440,8 +1416,8 @@ body.loading #main > h2 {
 }
 #page {
   padding: 1em;
-  margin: 0% auto;
   width: 70%;
+  margin: 0% auto;
   font-size: 1.2em;
   transition: opacity 1.25s ease-in-out;
   opacity: 1;
@@ -1478,7 +1454,7 @@ footer .copyright a {
   transition: height .6s;
   transition-timing-function: ease-in-out;
 }
-.main-nav ul:not(.drop).dropped a{
+.main-nav ul:not(.drop).dropped a {
   height: 3.196em;
   transition: height 1s, color .4s;
   transition-timing-function: ease-in-out;
@@ -1488,16 +1464,9 @@ footer .copyright a {
   width: 0;
   transition: width .8s ease-in-out;
 }
-.main-nav ul:not(.drop).dropped li{
+.main-nav ul:not(.drop).dropped li {
   width: 100%;
 }
-.main-nav {
-  margin: 0 0 2em 0;
-  padding: 0;
-  text-align: left;
-  letter-spacing: -1em;
-}
-
 .main-nav ul li {
   display: block;
   letter-spacing: normal;
@@ -1555,21 +1524,13 @@ footer .copyright a {
 .main-nav ul:not(.drop) a {
   border-bottom: none;
 }
-.main-nav,
-#search {
+.main-nav {
   margin-top: -0.7em;
 }
 .menu_group > section > nav:nth-child(2) {
   margin-top: 0;
 }
-.menu_group > section > div:nth-child(3) {
-  margin-top: 0 !important;
-}
 
-#dynamic-locale {
-  text-transform: uppercase;
-  transition: color .3s;
-}
 footer ul {
   list-style: none;
   padding-left: 0;
@@ -1580,13 +1541,16 @@ footer ul li {
 .drop {
   margin-bottom: 0;
 }
-.main-nav .drop a {
+.drop a {
+  padding-right: 2.415em;
   border-bottom: none;
   background-color: #2c2e33;
   color: #a0a0a1;
   line-height: 2.75em;
-  padding-right: 2.415em;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .drop a::after {
   font-family: FontAwesome;
@@ -1598,16 +1562,11 @@ footer ul li {
 .drop a:hover {
   cursor: pointer;
 }
-.main-nav a:hover,
-.main-nav form:hover,
-#dynamic-locale:hover {
+.main-nav a:hover {
   color: #fff !important;
 }
 .dropped.drop a::after {
   transform: rotate(90deg);
-}
-.languageselect {
-  padding-left: 15px !important;
 }
 .copyright>a>img {
   vertical-align: text-bottom;
@@ -1747,6 +1706,8 @@ footer ul li {
   position: relative;
 }
 #search_input {
+  float: none;
+  margin-bottom: 0;
   padding: 0 3.4em;
   box-shadow: inset 0 0 0 0.26em #2c2e33;
   letter-spacing: normal;
@@ -1825,25 +1786,22 @@ footer ul li {
   display: block !important;
 }
 #searchextrashow label {
+  display: block;
   overflow: hidden;
-  margin: 0;
   padding: 0;
+  max-width: none;
   width: 0;
   height: 0;
+  border-radius: 0;
   background-color: #2c2e33;
+  box-shadow: none;
   text-transform: uppercase;
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: .96em;
   line-height: 3.196;
-  cursor: pointer;
   transition: height .6s, padding .8s, width .8s, border .4s;
   transition-timing-function: ease-in-out;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 #searchextrashow li:nth-of-type(2n+1) > label {
   background-color: #2f3136;
@@ -1855,15 +1813,6 @@ footer ul li {
   transition: height 1s, padding .8s, width .8s, color .4s, border 1s;
   transition-timing-function: ease-in-out;
 }
-#searchextrashow input[type="checkbox"] + label::before {
-  margin-right: 0.35em;
-  content: "\f096";
-  font-family: FontAwesome;
-}
-#searchextrashow input[type="checkbox"]:checked + label::before {
-  margin-right: 0.2em;
-  content: "\f046";
-}
 /* Search within */
 #searchextrashow > label {
   background-color: #2C2E33;
@@ -1874,12 +1823,11 @@ footer ul li {
 #searchextrashow.dropped > label:last-of-type {
   border-bottom: 1px solid #a0a0a1;
 }
-#searchextrashow input[type="radio"] + label::before {
-  margin-right: 0.35em;
+#searchextrashow input[type="radio"]+label::before {
+  margin-right: 0.4em;
   content: "\f1db";
-  font-family: FontAwesome;
 }
-#searchextrashow input[type="radio"]:checked + label::before {
+#searchextrashow input[type="radio"]:checked+label::before {
   content: "\f05d";
 }
 
@@ -2020,14 +1968,14 @@ div.pagelist {
 #zoom {
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
   z-index: 100009;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .pagelist.gallery {
@@ -2055,8 +2003,9 @@ ul.pagelist.gallery li:first-child > * {
   display: inline;
 }
 
+
 @media screen and (max-width: 1680px) {
-  body, input, select, textarea {
+  body, input, textarea {
     font-size: 11pt;
   }
   #main .thumb {
@@ -2098,6 +2047,8 @@ ul.pagelist.gallery li:first-child > * {
     transition-delay: 1.85s;
   }
 }
+
+
 @media screen and (max-width: 1280px) {
   .panel {
     padding: 3em 3em 1em 3em;
@@ -2200,6 +2151,7 @@ ul.pagelist.gallery li:first-child > * {
     transition-delay: 1.85s;
   }
 }
+
 @media screen and (max-width: 736px) {
   h1 {
     font-size: 1.5em;
@@ -2219,25 +2171,22 @@ ul.pagelist.gallery li:first-child > * {
   h6 {
     font-size: 0.7em;
   }
-  form .field.half,
-  #mailform input:not(.button),
-  #commentform input:not(.button) {
+  form .half {
     float: none;
-    width: 100% !important;
+    width: 100%;
   }
-  form .field.half.first,
-  form input#name {
+  form .half.first {
     margin-right: 0;
   }
-  #mailform {
-    margin-top: 0;
+  .data_conf {
+    margin: -.12em 0 1.2em;
   }
   #passwordform {
     max-width: none;
   }
-  label[for="dataconfirmation"],
-  label[for="comment_dataconfirmation"] {
-    margin: -2.8em 0 -0.5em;
+  #loginform form {
+    padding: 0;
+    background-color: #2c2e33;
   }
   .panel {
     transform: translateY(-80vh);
@@ -2308,7 +2257,6 @@ ul.pagelist.gallery li:first-child > * {
     margin-top: .5em;
   }
 
-
   /* Zenphoyo Archive */
 
   .month li {
@@ -2320,13 +2268,11 @@ ul.pagelist.gallery li:first-child > * {
 }
 
 @media screen and (max-width: 480px) {
-  #mailform .button,
-  #commentform .special,
-  #passwordform button {
+  form .button,
+  form button {
     width: 100%;
   }
-  #mailform .special,
-  #passwordform .special {
+  form .special:nth-last-of-type(2) {
     margin-bottom: 1.2em;
   }
   #main .thumb {
@@ -2351,4 +2297,29 @@ ul.pagelist.gallery li:first-child > * {
     height: auto;
     margin-left: -1em;
   }
+  #passwordform {
+    max-width: none;
+    background-color: #2f3136;
+  }
+  #loginform {
+    padding: 0;
+    background-color: #2f3136;
+    box-shadow: none;
+  }
+  #commentcontent img {
+    margin: 0;
+  }
+}
+
+/* Accessible alternative to "display: none" */
+.captcha-label,
+.hide {
+  position: absolute !important;
+  overflow: hidden !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  width: 1px !important;
+  height: 1px !important;
+  border: 0 !important;
 }
