--- a/multiverse/css/mv_ad_tb.css
+++ b/multiverse/css/mv_ad_tb.css
@@ -4,8 +4,8 @@ body {
 }
 #zp__admin_module {
   background-color: #1f2224;
-  transition: filter .5s;
   box-shadow: none;
+  transition: filter .5s;
 }
 body.modal-active #zp__admin_module {
   filter: blur(2px);
@@ -21,14 +21,13 @@ body.modal-active #zp__admin_module {
   letter-spacing: normal;
   font-weight: normal;
 }
-
 #zp__admin_link::after {
   content: "\f0c9";
   font-family: FontAwesome;
 }
 #zp__admin_link:hover {
-  color: #fff !important;
   background-color: grey;
+  color: #fff !important;
 }
 #zp__admin_data {
   background-color: inherit;
@@ -40,8 +39,8 @@ body.modal-active #zp__admin_module {
   color: #cacaca;
 }
 #zp__admin_data a:hover {
-  color: #FFF !important;
   background-color: #58595B;
+  color: #FFF !important;
 }
 #zp__admin_data ul {
   overflow-y: auto;
@@ -50,18 +49,11 @@ body.modal-active #zp__admin_module {
 #zp__admin_info .zp_user {
   color: inherit;
 }
-
 @media screen and (max-width: 736px) {
-  body:not(.loading):not(.modal-active) header {
+  body:not(.loading):not(.modal-active) #header {
     top: 30px;
   }
   .poptrox-overlay {
     z-index: 100002 !important;
-  }
-  .themeSwitcherControlLink{
-    top: 0;
-    z-index: 100002;
-    height: 30px;
-    border: none;
   }
 }
