--- a/multiverse/css/internal/theme_switcher.css
+++ b/multiverse/css/internal/theme_switcher.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 50%;
   z-index: 100002;
-  padding: 0 5px;
+  padding: 2px 5px 0;
   border-radius: 0 0 5px 5px;
   background-color: inherit;
   white-space: nowrap;
@@ -11,17 +11,18 @@
   transform: translateX(-50%);
 }
 #themeSwitcher_zenpage input {
-  left: 0;
+  position: static;
   display: inline;
   float: none;
-  margin-right: 2px;
+  margin-right: 0;
+  vertical-align: middle;
   opacity: 1;
-  filter: grayscale();
-  cursor: pointer;
+  accent-color: #a0a0a1;
 }
 #themeSwitcher {
   margin: 0 2px;
-  border: none;
+  border: 0;
+  background: #34363b;
   color: inherit;
 }
 #themeSwitcher_zenpage label {
@@ -29,6 +30,7 @@
   margin-left: 5px;
   font-weight: 400;
   cursor: pointer;
+  color: inherit !important;
 }
 body.modal-active .themeSwitcherControlLink {
   filter: blur(2px);
@@ -37,6 +39,7 @@ body.modal-active .themeSwitcherControlLink {
   .themeSwitcherControlLink {
     top: auto;
     bottom: 0;
+    padding: 0;
     width: 100%;
     height: 26px;
     text-align: center;
