Option "social_content" encoded so that separation commas are not confused with commas eventually present in field values, messing up things. • Simplified handling and saving of the above option

--- a/multiverse/css/style.css
+++ b/multiverse/css/style.css
@@ -1598,7 +1598,7 @@ footer ul li {
 .drop a:hover {
   cursor: pointer;
 }
-.main-nav a:hover {
+.main-nav a:not(.fa-rss):hover {
   color: #fff !important;
 }
 .dropped.drop a::after {
