--- a/multiverse/css/style.css
+++ b/multiverse/css/style.css
@@ -270,7 +270,7 @@ hr.major {
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
-button,
+button:not(#zp__admin_module button),
 .button {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -299,7 +299,7 @@ button,
 input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover,
-button:hover,
+button:not(#zp__admin_module button):hover,
 .button:hover {
   box-shadow: inset 0 0 0 2px #59a6d5;
   color: #59a6d5 !important;
@@ -307,7 +307,7 @@ button:hover,
 input[type="submit"]:hover:active,
 input[type="reset"]:hover:active,
 input[type="button"]:hover:active,
-button:hover:active,
+button:not(#zp__admin_module button):hover:active,
 .button:hover:active {
   background-color: rgba(89, 166, 213, 0.15);
   color: #59a6d5 !important;
@@ -1274,9 +1274,9 @@ body.modal-active #main{
   width: 100%;
   cursor: zoom-in;
 }
-/* QUESTION:[IE support] Drop support for Internet Explorer?
-Then we have to add below rule after handling the same question in main.js
-and we can remove the backround declarations from the above rule */
+/* QUESTION:[IE support] Drop support for Internet Explorer? Then we have to add the below
+rule after handling the same question in main.js and we can remove the background
+declarations from the above rule */
 
 /* #main .thumb>a.image>img {
   -o-object-fit: cover;
